force-app/main/default/objects/Loan__c/Loan__c.object-meta.xml
<CustomObject>
    <description>Loan application record tracking the full lifecycle from submission through underwriting to approval or denial. Fires Loan_Status_Change__e on every status transition for Dynatrace anomaly detection.</description>
    <label>Loan</label>
    <nameField>
        <displayFormat>LOAN-{0000}</displayFormat>
        <label>Loan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>