force-app/main/default/objects/Loan__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <description>Contact record of the broker who submitted the loan application. Broker Id is included in Loan_Status_Change__e for Dynatrace broker-level performance segmentation.</description>
    <label>Broker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>