force-app/main/default/objects/Loan__c/fields/Status_Changed_At__c.field-meta.xml
<CustomField>
    <fullName>Status_Changed_At__c</fullName>
    <description>Timestamp of the most recent status transition. Stamped by LoanTrigger on every Status__c change. Used by Dynatrace to calculate dwell time per lifecycle stage without correlating event history.</description>
    <label>Status Changed At</label>
    <type>DateTime</type>
</CustomField>