force-app/main/default/objects/Loan__c/validationRules/Amount_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Ensures the loan amount is a positive value. Prevents null or zero amounts that would silently skew Dynatrace aggregation metrics.</description>
    <errorConditionFormula>OR(ISNULL(Amount__c), Amount__c &lt;= 0)</errorConditionFormula>
    <errorMessage>Loan amount must be a positive value.</errorMessage>
</ValidationRule>