force-app/main/default/objects/Loan__c/validationRules/Broker_Required_On_Submission.validationRule-meta.xml
<ValidationRule>
    <fullName>Broker_Required_On_Submission</fullName>
    <active>true</active>
    <description>Requires a broker to be specified when a loan is in Submitted status. Ensures Dynatrace broker-level segmentation is never missing for submitted loans.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, 'Submitted'), ISNULL(Broker__c))</errorConditionFormula>
    <errorMessage>A broker is required for submitted loans.</errorMessage>
</ValidationRule>